Lint protos (#589)
* Lint protos

* Updates after linting protos

* Update gh actions

* Update gosec

* Fix permissions

* Polish
