# internal/interfaces/grpc/handler/trade.go
@@ -15,74 +15,54 @@ import (
 const ErrCannotServeRequest = "cannot serve request, please retry"
 
 type tradeHandler struct {
-	tdexv1.UnimplementedTradeServer
 	tradeSvc application.TradeService
 }
 
 func NewTradeHandler(
 	tradeSvc application.TradeService,
-) tdexv1.TradeServer {
+) tdexv1.TradeServiceServer {
 	return newTradeHandler(tradeSvc)
 }
 
-func newTradeHandler(
-	tradeSvc application.TradeService,
-) *tradeHandler {
+func newTradeHandler(tradeSvc application.TradeService) *tradeHandler {
 	return &tradeHandler{
 		tradeSvc: tradeSvc,
 	}
 }
 
-func (t tradeHandler) Markets(
-	ctx context.Context,
-	req *tdexv1.MarketsRequest,
-) (*tdexv1.MarketsReply, error) {
-	return t.markets(ctx, req)
+func (t tradeHandler) ListMarkets(
+	ctx context.Context, req *tdexv1.ListMarketsRequest,
+) (*tdexv1.ListMarketsResponse, error) {
+	return t.listMarkets(ctx, req)
 }
 
-func (t tradeHandler) Balances(
-	ctx context.Context,
-	req *tdexv1.BalancesRequest,
-) (*tdexv1.BalancesReply, error) {
-	return t.balances(ctx, req)
+func (t tradeHandler) GetMarketBalance(
+	ctx context.Context, req *tdexv1.GetMarketBalanceRequest,
+) (*tdexv1.GetMarketBalanceResponse, error) {
+	return t.getMarketBalance(ctx, req)
 }
 
-func (t tradeHandler) MarketPrice(
-	ctx context.Context,
-	req *tdexv1.MarketPriceRequest,
-) (*tdexv1.MarketPriceReply, error) {
-	return t.marketPrice(ctx, req)
-}
-
-func (t tradeHandler) TradePropose(
-	req *tdexv1.TradeProposeRequest,
-	stream tdexv1.Trade_TradeProposeServer,
-) error {
-	return t.tradePropose(stream, req)
+func (t tradeHandler) PreviewTrade(
+	ctx context.Context, req *tdexv1.PreviewTradeRequest,
+) (*tdexv1.PreviewTradeResponse, error) {
+	return t.previewTrade(ctx, req)
 }
 
 func (t tradeHandler) ProposeTrade(
 	ctx context.Context, req *tdexv1.ProposeTradeRequest,
-) (*tdexv1.ProposeTradeReply, error) {
+) (*tdexv1.ProposeTradeResponse, error) {
 	return t.proposeTrade(ctx, req)
-}
-
-func (t tradeHandler) TradeComplete(
-	req *tdexv1.TradeCompleteRequest, stream tdexv1.Trade_TradeCompleteServer,
-) error {
-	return t.tradeComplete(stream, req)
 }
 
 func (t tradeHandler) CompleteTrade(
 	ctx context.Context, req *tdexv1.CompleteTradeRequest,
-) (*tdexv1.CompleteTradeReply, error) {
+) (*tdexv1.CompleteTradeResponse, error) {
 	return t.completeTrade(ctx, req)
 }
 
-func (t tradeHandler) markets(
-	ctx context.Context,
-	req *tdexv1.MarketsRequest,
-) (*tdexv1.MarketsReply, error) {
+func (t tradeHandler) listMarkets(
+	ctx context.Context, req *tdexv1.ListMarketsRequest,
+) (*tdexv1.ListMarketsResponse, error) {
 	markets, err := t.tradeSvc.GetTradableMarkets(ctx)
 	if err != nil {
 		return nil, err
@@ -106,13 +86,12 @@ func (t tradeHandler) markets(
 		marketsWithFee = append(marketsWithFee, m)
 	}
 
-	return &tdexv1.MarketsReply{Markets: marketsWithFee}, nil
+	return &tdexv1.ListMarketsResponse{Markets: marketsWithFee}, nil
 }
 
-func (t tradeHandler) balances(
-	ctx context.Context,
-	req *tdexv1.BalancesRequest,
-) (*tdexv1.BalancesReply, error) {
+func (t tradeHandler) getMarketBalance(
+	ctx context.Context, req *tdexv1.GetMarketBalanceRequest,
+) (*tdexv1.GetMarketBalanceResponse, error) {
 	market, err := parseMarket(req.GetMarket())
 	if err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
@@ -123,30 +102,26 @@ func (t tradeHandler) balances(
 		return nil, err
 	}
 
-	balancesWithFee := make([]*tdexv1.BalanceWithFee, 0)
-	balancesWithFee = append(balancesWithFee, &tdexv1.BalanceWithFee{
-		Balance: &tdexv1.Balance{
-			BaseAmount:  balance.Balance.BaseAmount,
-			QuoteAmount: balance.Balance.QuoteAmount,
-		},
-		Fee: &tdexv1.Fee{
-			BasisPoint: balance.Fee.BasisPoint,
-			Fixed: &tdexv1.Fixed{
-				BaseFee:  balance.Fee.FixedBaseFee,
-				QuoteFee: balance.Fee.FixedQuoteFee,
+	return &tdexv1.GetMarketBalanceResponse{
+		Balances: &tdexv1.BalanceWithFee{
+			Balance: &tdexv1.Balance{
+				BaseAmount:  balance.Balance.BaseAmount,
+				QuoteAmount: balance.Balance.QuoteAmount,
+			},
+			Fee: &tdexv1.Fee{
+				BasisPoint: balance.Fee.BasisPoint,
+				Fixed: &tdexv1.Fixed{
+					BaseFee:  balance.Fee.FixedBaseFee,
+					QuoteFee: balance.Fee.FixedQuoteFee,
+				},
 			},
 		},
-	})
-
-	return &tdexv1.BalancesReply{
-		Balances: balancesWithFee,
 	}, nil
 }
 
-func (t tradeHandler) marketPrice(
-	ctx context.Context,
-	req *tdexv1.MarketPriceRequest,
-) (*tdexv1.MarketPriceReply, error) {
+func (t tradeHandler) previewTrade(
+	ctx context.Context, req *tdexv1.PreviewTradeRequest,
+) (*tdexv1.PreviewTradeResponse, error) {
 	market, err := parseMarket(req.GetMarket())
 	if err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
@@ -174,8 +149,8 @@ func (t tradeHandler) marketPrice(
 	basePrice, _ := preview.Price.BasePrice.Float64()
 	quotePrice, _ := preview.Price.QuotePrice.Float64()
 
-	return &tdexv1.MarketPriceReply{
-		Prices: []*tdexv1.PriceWithFee{
+	return &tdexv1.PreviewTradeResponse{
+		Previews: []*tdexv1.Preview{
 			{
 				Price: &tdexv1.Price{
 					BasePrice:  basePrice,
@@ -201,7 +176,7 @@ func (t tradeHandler) marketPrice(
 
 func (t tradeHandler) proposeTrade(
 	ctx context.Context, req *tdexv1.ProposeTradeRequest,
-) (*tdexv1.ProposeTradeReply, error) {
+) (*tdexv1.ProposeTradeResponse, error) {
 	market, err := parseMarket(req.GetMarket())
 	if err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
@@ -243,7 +218,7 @@ func (t tradeHandler) proposeTrade(
 		}
 	}
 
-	return &tdexv1.ProposeTradeReply{
+	return &tdexv1.ProposeTradeResponse{
 		SwapAccept:     swapAccept,
 		SwapFail:       swapFail,
 		ExpiryTimeUnix: swapExpiryTime,
@@ -252,7 +227,7 @@ func (t tradeHandler) proposeTrade(
 
 func (t tradeHandler) completeTrade(
 	ctx context.Context, req *tdexv1.CompleteTradeRequest,
-) (*tdexv1.CompleteTradeReply, error) {
+) (*tdexv1.CompleteTradeResponse, error) {
 	var swapComplete domain.SwapComplete
 	if s := req.SwapComplete; s != nil {
 		swapComplete = s
@@ -278,56 +253,10 @@ func (t tradeHandler) completeTrade(
 		}
 	}
 
-	return &tdexv1.CompleteTradeReply{
+	return &tdexv1.CompleteTradeResponse{
 		Txid:     txID,
 		SwapFail: swapFailStub,
 	}, nil
-}
-
-func (t tradeHandler) tradePropose(
-	stream tdexv1.Trade_TradeProposeServer, req *tdexv1.TradeProposeRequest,
-) error {
-	rr := &tdexv1.ProposeTradeRequest{
-		Market:      req.GetMarket(),
-		Type:        req.GetType(),
-		SwapRequest: req.GetSwapRequest(),
-	}
-	reply, err := t.proposeTrade(stream.Context(), rr)
-	if err != nil {
-		return err
-	}
-	resp := &tdexv1.TradeProposeReply{
-		SwapAccept:     reply.GetSwapAccept(),
-		SwapFail:       reply.GetSwapFail(),
-		ExpiryTimeUnix: reply.GetExpiryTimeUnix(),
-	}
-
-	if err := stream.Send(resp); err != nil {
-		return status.Error(codes.Internal, err.Error())
-	}
-	return nil
-}
-
-func (t tradeHandler) tradeComplete(
-	stream tdexv1.Trade_TradeCompleteServer, req *tdexv1.TradeCompleteRequest,
-) error {
-	rr := &tdexv1.CompleteTradeRequest{
-		SwapComplete: req.GetSwapComplete(),
-		SwapFail:     req.GetSwapFail(),
-	}
-	reply, err := t.completeTrade(stream.Context(), rr)
-	if err != nil {
-		return err
-	}
-
-	resp := &tdexv1.TradeCompleteReply{
-		Txid:     reply.GetTxid(),
-		SwapFail: reply.GetSwapFail(),
-	}
-	if err := stream.Send(resp); err != nil {
-		return status.Error(codes.Internal, err.Error())
-	}
-	return nil
 }
 
 func validateTradeType(tType tdexv1.TradeType) error {
