# pkg/trade/type/type.go
@@ -22,7 +22,7 @@ type TradeType int
 
 // Validate makes sure that the current trade type is either BUY or SELL
 func (t TradeType) Validate() error {
-	if t != TradeType(tdexv1.TradeType_BUY) && t != TradeType(tdexv1.TradeType_SELL) {
+	if t != TradeType(tdexv1.TradeType_TRADE_TYPE_BUY) && t != TradeType(tdexv1.TradeType_TRADE_TYPE_SELL) {
 		return ErrInvalidTradeType
 	}
 	return nil
@@ -30,12 +30,12 @@ func (t TradeType) Validate() error {
 
 // IsBuy returns whether the current trade type is BUY
 func (t TradeType) IsBuy() bool {
-	return t == TradeType(tdexv1.TradeType_BUY)
+	return t == TradeType(tdexv1.TradeType_TRADE_TYPE_BUY)
 }
 
 // IsSell returns whether the current trade type is SELL
 func (t TradeType) IsSell() bool {
-	return t == TradeType(tdexv1.TradeType_SELL)
+	return t == TradeType(tdexv1.TradeType_TRADE_TYPE_SELL)
 }
 
 // String formats the type to a human-readable form
